--- a/scss/media-queries/_min-width-1200px.scss
+++ b/scss/media-queries/_min-width-1200px.scss
@@ -1,11 +1,12 @@
 @media (min-width: em(1200)) {
 
     .wp-block-query.alignwide,
-    .single .entry-content .alignwide {
+    .single .entry-content .alignwide,
+    .page .entry-content .alignwide {
         margin-left: -125px;
         margin-right: -125px;
-        max-width: var(--container-width);
-        width: var(--container-width);
+        max-width: calc(var(--container-width-narrow) + 250px);
+        width: calc(var(--container-width-narrow) + 250px);
     }
 
 }
